--- a/client/app/account/profile/profile.scss
+++ b/client/app/account/profile/profile.scss
@@ -72,3 +72,7 @@ a.list-group-item:hover, a.list-group-item:focus {
     }
 }
 
+.profileHR {
+   width: 80%; margin-top:10px; margin-bottom:10px;
+}
+
