--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -8,7 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a ng-href="/" class="navbar-brand">เพื่อนใจ</a>
+      <a ng-href="/" class="navbar-brand" style="font-size:1.4em; color:black;">      <img ng-src="/assets/images/icon.gif" style="width:30px; height:25px; margin-top: -5px;">
+เพื่อนใจ</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main" style="text-align:center;">
       <ul class="nav navbar-nav" style="margin-top:0;">
@@ -65,8 +66,8 @@
               </ul>
             </span>
         </li>
-        <li ng-show="isLoggedIn()"><a class="btn btn-info" ng-href="/share" style="color: white; padding: 8px; font-size: 1.1em; margin:5px;
-"><i class="fa fa-pencil"></i> ให้ความรู้</a></li>
+<!--         <li ng-show="isLoggedIn()"><a class="btn btn-info" ng-href="/share" style="color: white; padding: 8px; font-size: 1.1em; margin:5px;
+"><i class="fa fa-pencil"></i> ให้ความรู้</a></li> -->
         <li ng-show="isLoggedIn()"><a class="btn btn-info" ng-href="/ask" style="  color: white;
   padding: 8px;
   font-size: 1.1em;
