--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -207,7 +207,6 @@ a:hover {
   height: 0;
   border: solid 5px;
   border-color: #FFF9AA #428bca transparent transparent;
-  color: white;
   display: table;
   padding: 5px;
   text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
@@ -217,8 +216,7 @@ a:hover {
   width: 0;
   height: 0;
   border: solid 5px;
-  border-color: #FFF9AA transparent transparent #428bca;
-  color: white;
+  border-color: #428bca transparent transparent #FFF9AA;
   display: table;
   padding: 5px;
   text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
@@ -342,7 +340,6 @@ a:hover {
 .questionPanel {
   border-top: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
-  background-color: #FFF9AA;
   margin-left: 0;
   margin-right: 0;
 }
