--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -26,8 +26,6 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'article/singleArticle/singleArticle.scss';
 @import 'ask/ask.scss';
 @import 'contact/contact.scss';
-@import 'createstory/createstory.scss';
-@import 'help/help.scss';
 @import 'landing/landing.scss';
 @import 'main/main.scss';
 @import 'question/question.scss';
@@ -35,6 +33,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'service/service.scss';
 @import 'share/share.scss';
 @import 'suggestion/suggestion.scss';
+@import 'support/support.scss';
 @import 'tag/tag/tag.scss';
 @import 'tag/tags/tags.scss';
 @import 'user/user.scss';
