--- a/client/components/sidebar/rightSidebar.html
+++ b/client/components/sidebar/rightSidebar.html
@@ -44,14 +44,14 @@
 		<img ng-src="/assets/images/plane.jpg"/>
 	</div>
 </a> -->
-
-<a ng-href="/suggestion" class="col-md-12 col-sm-4 col-xs-12 no-gutter">
+<!-- 
+<a ng-href="/suggestion" class="col-md-12 col-sm-4 col-xs-12 no-gutter" style="background-color:rgba(255, 249, 170, 0.2)">
   <div class="triangle-right text-center" style="width:100%; color:black;">
 	  <h2>เสนอไอเดียให้เพื่อนใจ</h2>
 	  <small>- ยินดีฟังทุกเรื่องจ้า -</small>
   </div>
   <img ng-src="/assets/images/climb.png"/ style="width:100%;">
-</a>
+</a> -->
 
 <!-- <a ng-href="/report">
 	<div id="reportProblem" class="sidebarBox text-center col-md-12 col-sm-6 col-xs-12 no-gutter" style="background: #1069C9;">
@@ -64,7 +64,7 @@
 </a> -->
 <!-- style="background-color:rgba(255, 249, 170, 0.5)" -->
 
-<a ng-href="/report" class="col-md-12 col-sm-4 col-xs-12 no-gutter">
+<!-- <a ng-href="/report" class="col-md-12 col-sm-4 col-xs-12 no-gutter" style="background-color:rgba(255, 249, 170, 0.2)">
   <div class="triangle-left text-center" style="width:100%; color:black;">
   <h2>แจ้งปัญหาของเว็บไซ</h2>
   <small>- จะแก้เท่าที่แก้ได้ -</small>
@@ -72,13 +72,13 @@
   <img ng-src="/assets/images/repair.png"/ style="width:100%;">
 </a>
 
-<a ng-href="/about" class="col-md-12 col-sm-4 col-xs-12 no-gutter">
+<a ng-href="/about" class="col-md-12 col-sm-4 col-xs-12 no-gutter"style="background-color:rgba(255, 249, 170, 0.2)">
   <div class="triangle-right text-center" style="width:100%; color:black;">
     <h2>รู้จักกับผู้สร้าง</h2>
     <small>- ปรทัต -</small>
   </div>
-  <img ng-src="/assets/images/waves.jpg" style="width:100%;"/>
-</a>
+  <img ng-src="/assets/images/waves.gif" style="width:100%;"/>
+</a> -->
 
 <!-- <a ng-href="/service" style="position:relative;">
 	<div id="service" class="sidebarBox text-center pinkGradient col-md-12 col-sm-4 col-xs-12 no-gutter">
