--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -20,6 +20,10 @@ i {
   color:#FFF577; text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
 }
 
+textarea {
+   resize: none;
+}
+
 iframe{
   width:85%;
   height:280px;
@@ -51,6 +55,10 @@ a:hover {
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
  background-color: transparent;
 }
+
+.nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a, .nav-tabs-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:hover, .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
+  border-bottom-color: #FFF9AA;
+}
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
   background-color: transparent;
 }
@@ -78,6 +86,7 @@ a:hover {
 
 .nav-tabs > li > a:hover {
   background: aliceblue;
+  border-bottom-color: aliceblue;
 }
 
 .haveBorder {
@@ -212,6 +221,12 @@ a:hover {
   text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
 }
 
+.triangleRight {
+  border: solid 3px;
+  border-color: #FFF9AA #428bca transparent transparent;
+  padding: 5px;
+}
+
 .triangle-left {
   width: 0;
   height: 0;
@@ -220,6 +235,12 @@ a:hover {
   display: table;
   padding: 5px;
   text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+}
+
+.triangleLeft {
+  border: solid 3px;
+  border-color: #428bca transparent transparent #FFF9AA;
+  padding: 5px;
 }
 
 #askQuestion {
@@ -240,10 +261,9 @@ a:hover {
 
 .panel
 {
-    /*position: relative;*/
-    -webkit-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
+      border: 1px solid;
+      border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+      -webkit-border-radius: 3px;
 }
 
 .panel-default > .panel-leftheading
@@ -350,7 +370,9 @@ a:hover {
     right: 7px;
     padding:10px;
     background-color: #FFF9AA;
-    border: 0.5px solid #dddddd;
+    border: 1px solid;
+    border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+    -webkit-border-radius: 3px;
 }
 
 .qStatusPanel p {
@@ -479,5 +501,24 @@ a:hover {
 }
 .mainTopic{
   text-align: center; display:block; margin: 0 auto; width:100%; height:100%; font-size: 1.2em;
+}
+
+#searchQuestionForm:before {
+  border-right-color: black;
+  border-width: 8px;
+}
+
+#searchQuestionForm:after, #searchQuestionForm:before {
+  position: absolute;
+  top: 11px;
+  left: -16px;
+  right: 100%;
+  width: 0;
+  height: 0;
+  display: block;
+  content: " ";
+  border-color: transparent;
+  border-style: solid solid outset;
+  pointer-events: none;
 }
 
