--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -34,10 +34,11 @@
 }
 
 .userPanelQuestion {
-    box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.75);
-    border: 1px solid #dddddd;
     background: aliceblue;
     border-radius: 4px;
+    border: 1px solid;
+    border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+    -webkit-border-radius: 3px;
 }
 
 .answersInQuestion {
