--- a/client/app/landing/landing.scss
+++ b/client/app/landing/landing.scss
@@ -1,13 +1,3 @@
-/*#landingMain {
-	height:400px;
-	background-size: cover;
-}
-
-#mainCarousel {
-	margin: 0 auto;
-	display:block;
-}
-*/
 #mainTitle h1 {
 	font-size: 15em;
 }
@@ -16,140 +6,14 @@
 	width:590px;
 }
 
-.img-thumbnail {
-  /*background-color: #FFF9AA;*/
-  /*border: 3px solid #428bca;*/
+#landingJoinUs {
+  font-size: 7em; text-align: center; border:3px solid #FFF9AA; width: 50%;
+  border-color:  #FFF9AA #FFF9AA #428bca #428bca;
+  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);         
+    display: block;
+    margin: 0 auto; padding:0 20px; padding-bottom: 70px;   margin-bottom: 50px;
+    background-color: aliceblue;
 }
-
-/*.leftArrow {
-	position: absolute;
-	left:15px;
-	z-index: 2;
-	height: 500px;
-	width:10%;
-	cursor:pointer;
-}
-
-.rightArrow {
-	position: absolute;
-	right:15px;
-	z-index: 2;
-	height: 500px;
-	width:10%;
-	cursor:pointer;
-
-}
-
-.slideArrow {
-	position: absolute;
-	top:230px;
-}*/
-
-/*.carousel.fading {
-  .carousel-inner {
-    height:500px;
-    .item {
-      display: block;*/
-      /*margin:0 auto;*/
-/*      position: absolute;
-      left: 0 !important;
-      width: 100%;
-      opacity: 0;
-      z-index:-121;
-      @include transition(0.4s ease opacity);
-      &.active, &.next.left {
-        opacity: 1;
-      }
-      &.next, &.active.left {
-        opacity: 0;
-      }
-    }
-  }
-}*/
-/*.carousel .item {
-  opacity: 0;
-  -webkit-transition-property: opacity;
-  -moz-transition-property: opacity;
-  -o-transition-property: opacity;
-  transition-property: opacity;
-}*/
-/*
-.carousel-fade {
-  .carousel-inner {
-    .item {
-	  	height:500px;
-	  	padding-top: 300px;
-      opacity: 0;
-      z-index: 0;
-      -webkit-transition-property: opacity;
-      transition-property: opacity;
-    }
-
-    .active {
-      opacity: 1;
-    }
-
-    .active.left,
-    .active.right {
-      left: 0;
-      opacity: 0;
-      z-index: 1;
-    }
-
-    .next.left,
-    .prev.right {
-      opacity: 1;
-    }
-  }
-
-  .carousel-control {
-    z-index: 2;
-  }
-}
-
-@media all and (transform-3d), (-webkit-transform-3d) {
-    .carousel-inner > .item.next,
-    .carousel-inner > .item.active.right {
-      -webkit-transform: translate3d( 0, 0, 0);
-      transform: translate3d( 0, 0, 0);
-    }
-    .carousel-inner > .item.prev,
-    .carousel-inner > .item.active.left {
-      -webkit-transform: translate3d( 0, 0, 0);
-      transform: translate3d( 0, 0, 0);
-    }
-    .carousel-inner > .item.next.left,
-    .carousel-inner > .item.prev.right,
-    .carousel-inner > .item.active {
-       -webkit-transform: translate3d(0, 0, 0);
-       transform: translate3d(0, 0, 0);
-    }
-}*/
-/*.arrow {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 20px;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-.arrow:before,
-.arrow:after {
-  content: '';
-  position: absolute;
-  bottom: 100%;
-  width: 50%;
-  box-sizing: border-box;
-}
-.arrow:before {
-  right: 50%;
-  border-bottom: 20px solid rgba(0, 0, 0, 0.8);
-  border-right: 20px solid transparent;
-}
-.arrow:after {
-  left: 50%;
-  border-bottom: 20px solid rgba(0, 0, 0, 0.8);
-  border-left: 20px solid transparent;
-}*/
 
 @media(max-width: 1200px) {
   #mainTitle h1{
@@ -159,6 +23,9 @@
   }
   #mainTitle {
     width:600px;
+  }
+  #landingJoinUs {
+    width: 85%;
   }
 }
 
@@ -178,47 +45,23 @@
 	color:white;
 }
 
-#landingJoinUs {
-  font-size: 7em; text-align: center; border:3px solid #FFF9AA; width: 50%;
-    display: block;
-    margin: 0 auto; padding:20px; padding-bottom: 70px;   margin-bottom: 50px;
-    background-color: aliceblue;
-}
-
-/*.box.ng-hide{
+.box.ng-hide{
   display: block!important;
-  visibility: hidden!important;
+  visibility: hidden;
 }
 
 .box.ng-hide-add {
-  animation: bounceOutLeft;
-  visibility: visible;
+    -webkit-animation: fadeOut 0.4s;
+    -moz-animation: fadeOut 0.4s;
+    animation: fadeOut 0.4s;
+    visibility: visible;
 }
+
 .box.ng-hide-remove {
-  animation: bounceInLeft;
-}*/
-	/*margin-top: 300px;*/
-/*	margin-top:0;
+    animation: fadeInUp 0.4s;
+    -moz-animation: fadeInUp 0.4s;
+    -webkit-animation: fadeInUp 0.4s;
 }
-
-
-#mainInnerCarousel {
-	min-height: 500px;
-}*/
-/*
-#mainImg:after {
-    content : "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity : 0.8;
-    z-index: -1;
-    background-color: white;
-}*/
-
 
 #bigFB {
 	margin: 20px auto;
@@ -226,27 +69,3 @@
 	width: 50%;
 	display: block;
 }
-
-/*#landingBtn {
-	margin-top: 400px;
-}
-
-.carousel-button-main{
-	
-}
-
-    #slides_control > div{
-    height: 200px;
-}
-
-#slides_control {
-    position:absolute;
-    width: 400px;
-    left:50%;
-    top:20px;
-   margin-left:-200px;
-}
-#MainCarousel li {
-	display: none;
-}
-*/
