--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -34,6 +34,10 @@ iframe{
   max-width: 100%;
 }
 
+.page-header > h1 {
+  font-size: 4em;
+}
+
 /*img {
     -webkit-box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);
