--- a/client/components/sidebar/sideBanners1.html
+++ b/client/components/sidebar/sideBanners1.html
@@ -1,5 +1,12 @@
 <div ng-controller="sideBannersCtrl">
-	<a ng-href="/suggestion" class="col-md-12 col-sm-4 col-xs-12 no-gutter" style="background-color:rgba(255, 249, 170, 0.2)">
+	<a ng-href="/service" class="col-md-12 col-sm-4 col-xs-12 no-gutter"style="background-color:rgba(255, 249, 170, 0.2)">
+	  <div class="triangle-right text-center" style="width:100%; color:black;">
+	    <h2>อาสาเพื่อนใจ</h2>
+	    <small>- ทําฟรีด้วยรัก -</small>
+	  </div>
+	  <img ng-src="/assets/images/lighthouse.png" style="width:100%;"/>
+	</a>
+	<a ng-href="/suggestion" class="col-md-12 col-sm-4 col-xs-12 no-gutter" style="background-color:rgba(240, 248, 255, 0.6)">
 	  <div class="triangle-right text-center" style="width:100%; color:black;">
 		  <h2>เสนอแนะ</h2>
 		  <small>- ยินดีฟังทุกเรื่องจ้า -</small>
@@ -9,17 +16,10 @@
 
 	<a ng-href="/report" class="col-md-12 col-sm-4 col-xs-12 no-gutter" style="background-color:rgba(255, 249, 170, 0.2)">
 	  <div class="triangle-left text-center" style="width:100%; color:black;">
-	  <h2>แจ้งปัญหาของเว็บไซ</h2>
+	  <h2>แจ้งปัญหาของเว็บ</h2>
 	  <small>- จะแก้เท่าที่แก้ได้ -</small>
 	  </div>
 	  <img ng-src="/assets/images/repair.png"/ style="width:100%;">
 	</a>
 
-	<a ng-href="/aboutcreator" class="col-md-12 col-sm-4 col-xs-12 no-gutter"style="background-color:rgba(255, 249, 170, 0.2)">
-	  <div class="triangle-right text-center" style="width:100%; color:black;">
-	    <h2>รู้จักกับผู้สร้าง</h2>
-	    <small>- ปรทัต -</small>
-	  </div>
-	  <img ng-src="/assets/images/waves.gif" style="width:100%;"/>
-	</a>
 </div>
