--- a/client/components/sidebar/sideBanners2.html
+++ b/client/components/sidebar/sideBanners2.html
@@ -7,13 +7,14 @@
 	  <img ng-src="/assets/images/logo.gif" style="width:100%;"/>
 	</a>
 
-	<a ng-href="/service" class="col-md-12 col-sm-4 col-xs-12 no-gutter"style="background-color:rgba(240, 248, 255, 0.6)">
+	<a ng-href="/aboutcreator" class="col-md-12 col-sm-4 col-xs-12 no-gutter"style="background-color:rgba(255, 249, 170, 0.2)">
 	  <div class="triangle-right text-center" style="width:100%; color:black;">
-	    <h2>อาสาเพื่อนใจ</h2>
-	    <small>- ทําฟรีด้วยรัก -</small>
+	    <h2>รู้จักกับผู้สร้าง</h2>
+	    <small>- ปรทัต -</small>
 	  </div>
-	  <img ng-src="/assets/images/lighthouse.png" style="width:100%;"/>
+	  <img ng-src="/assets/images/waves.gif" style="width:100%;"/>
 	</a>
+
 	<a ng-href="/contact" class="col-md-12 col-sm-4 col-xs-12 no-gutter"style="background-color:rgba(240, 248, 255, 0.6)">
 	  <div class="triangle-left text-center" style="width:100%; color:black;">
 	    <h1>ติดต่อกับเรา</h1>
