--- a/client/components/sidebar/tagCloud.html
+++ b/client/components/sidebar/tagCloud.html
@@ -2,5 +2,5 @@
     <h2 style="text-align: center; font-size: 2.4em; padding-bottom:15px; border-bottom: 1px solid #dddddd; margin-top:10px;">แท็กยอดนิยม</h2>
     <jqcloud id="jqcloudtag" style="width:100%; display: block; margin:0 auto;" autoResize="true" words="popTags" height="370" width="155"shape="rectangular" removeOverflowing="false" steps="7" center="{x:0.5, y:0.45}"></jqcloud> 
  </div>
- <a ng-href="/tags"><h3 class="text-center">ดูแท็กทั่งหมด..</h3></a>
+ <!-- <a ng-href="/tags"><h3 class="text-center">ดูแท็กทั่งหมด..</h3></a> -->
  <hr>
