--- a/client/app/landing/landing.scss
+++ b/client/app/landing/landing.scss
@@ -1,5 +1,5 @@
 #mainTitle h1 {
-	font-size: 15em;
+	font-size: 14em;
 }
 
 #mainTitle {
@@ -12,9 +12,7 @@
   text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);         
     display: block;
     margin: 0 auto; 
-    /*padding:0 20px; */
-    padding-bottom: 45px;   margin-bottom: 50px;
-    /*background-color: aliceblue;*/
+    padding-bottom: 35px;   margin-bottom: 10px;
     color:white;
 }
 
@@ -43,6 +41,10 @@
   }
 }
 
+.btn:hover, .btn:focus {
+  color:white;
+}
+
 .mainLead {
 	font-size: 5em;
 	color:white;
@@ -61,14 +63,19 @@
 }
 
 .box.ng-hide-remove {
-    animation: fadeInUp 0.4s;
-    -moz-animation: fadeInUp 0.4s;
-    -webkit-animation: fadeInUp 0.4s;
+    animation: fadeIn 0.4s;
+    -moz-animation: fadeIn 0.4s;
+    -webkit-animation: fadeIn 0.4s;
 }
 
 #bigFB {
-	margin: 20px auto;
+	margin: 15px auto;
 	font-size: 22px;
-	width: 50%;
+	width: 30%;
 	display: block;
+}
+
+.puanjaiBorder {
+  border: 1px solid;
+  color: white; border-color: #428bca #428bca #FFF9AA #FFF9AB;
 }
