--- a/client/components/sidebar/sideBanners1.html
+++ b/client/components/sidebar/sideBanners1.html
@@ -1,7 +1,7 @@
 <div ng-controller="sideBannersCtrl">
 	<a ng-href="/service" class="col-md-12 col-sm-4 col-xs-12 no-gutter"style="background-color:rgba(255, 249, 170, 0.2)">
 	  <div class="triangle-right text-center" style="width:100%; color:black;">
-	    <h2>อาสาเพื่อนใจ</h2>
+	    <h2>กิจกรรมเพื่อนใจ</h2>
 	    <small>- ทําฟรีด้วยรัก -</small>
 	  </div>
 	  <img ng-src="/assets/images/lighthouse.png" style="width:100%;"/>
