added comments for question and questions ans

--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -60,7 +60,7 @@
 /********************************/
 /*          Panel cards         */
 /********************************/
-.panel.panel-card {
+/*.panel.panel-card {
     position: relative;
     height: 201px;
     border: none;
@@ -148,4 +148,4 @@
     
     -webkit-transition: padding 400ms ease-in-out;
             transition: padding 400ms ease-in-out;
-}
+}*/
