--- a/client/app/ask/ask.scss
+++ b/client/app/ask/ask.scss
@@ -1,16 +1,33 @@
 .fixed {
         position: fixed;
-        right:8%;
+        right:6%;
         top:65px;
         height:540px;
-        overflow-y: scroll; 
+        overflow-y: scroll;
+        width: 33.333%;
+}
+
+.absoluteCol {
+    position: absolute;
+    bottom: 0px;
+    left: 62.4%;
+    width: 38.66%;
 }
 
 @media (max-width:1000px) {
   .fixed {
     position: relative;
-    right:0;
+    left:0;
     top:0;
+    height:auto;
+    overflow-y: scroll; 
+    width:100%;
+  }
+  .absoluteCol {
+    position: relative;
+    left:0;
+    top:0;
+    width:100%;
     height:auto;
     overflow-y: scroll; 
   }
@@ -27,3 +44,4 @@ tags-input .tags .input {
     width:100%; 
     color:#428bca;
 }
+
