--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <headroom tolerance="5" offset="400" classes='{"initial":"animated","pinned":"slideInDown","unpinned":"slideOutUp","top":"headroom--top","notTop":"headroom--not-top"}' class="navbar-fixed-top">
-<div class="navbar navbar-default background-yellow" ng-controller="NavbarCtrl" style="border-radius: 0;">
+<nav class="navbar navbar-default background-yellow" ng-controller="NavbarCtrl" style="border-radius: 0; margin-bottom: 0; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 10px;">
   <div class="container-fluid">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
@@ -83,5 +83,5 @@
       </ul>
     </div>
   </div>
-</div>
+</nav>
 </headroom>
