--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -16,7 +16,7 @@ p,h1,h2,h3,h4,h5,h6,blockquote {
   word-wrap: break-word;
 }
 
-i {
+.fa {
   color:#FFF577; text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
 }
 
