fixed compat issue

--- a/client/app/ask/ask.scss
+++ b/client/app/ask/ask.scss
@@ -10,8 +10,8 @@
 .absoluteCol {
     position: absolute;
     bottom: 0px;
-    left: 62.4%;
-    width: 38.66%;
+    right:6%;
+    width: 33.333%;
 }
 
 @media (max-width:1000px) {
