--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -19,7 +19,7 @@
     	<h2>ช่วยเพื่อนใจให้อยู่ได้</h2>
     	<hr>
     	<a ng-href="/aboutcreator"><h3>1. เข้าใจสถานการณ์ของผู้สร้าง</h3></a>
-    	<a ng-href="/contact"><h3>2. รับบริจากอาหารและปัจจัย</h3></a>
+    	<a ng-href="/contact"><h3>2. รับบริจาคอาหารและปัจจัย</h3></a>
     	<a ng-href="/contact"><h3>3. รับสมัครผู้ร่วมงาน</h3></a>
     	<a ng-href="https://www.facebook.com/supakorn.laohasongkram"><h3>4. ให้กําลังใจผู้คนทํา</h3></a>
     </div>
