fix question page

--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -57,6 +57,10 @@
     background-color: #345;    
 }
 
+.questionOptions a {
+    font-size: 18px;
+}
+
 /********************************/
 /*          Panel cards         */
 /********************************/
