--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -61,6 +61,10 @@
     font-size: 18px;
 }
 
+#answerInput input{
+    background: linear-gradient(white, #fff9aa); font-size: 1.5em; width:100%; border-radius: 0; margin-top:15px; border-radius: 4px;
+}
+
 /********************************/
 /*          Panel cards         */
 /********************************/
