--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -80,6 +80,10 @@ a:hover {
   font-size:17px;
 }
 
+.navbar-default .navbar-nav > li > a {
+  font-size: 18px;
+}
+
 .navbar-default {
   background-color: #FFF9AA;
 }
