--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -75,7 +75,7 @@
   margin:5px;
   "><i class="fa fa-question"></i> ถามปัญหาใจ</a></li>
         <!-- <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a ng-href="/signup">สมัครเป็นเพื่อนใจ</a></li> -->
-        <li ng-hide="isLoggedIn()" ng-click="closeCollapse()"><a class="btn btn-info" ng-href="/login" style="color: white; padding: 8px; font-size: 1.1em; margin:5px;
+        <li ng-hide="isLoggedIn()" ng-click="closeCollapse()"><a class="btn btn-info" ng-href="/login" style="color: white; padding: 8px; margin:5px;
 "><i class="fa fa-sign-in"></i> เข้าสู้ระบบ</a></li>
         <!-- <li ng-show="isLoggedIn()"><a ng-href="/users/{{userId}}" style="padding-bottom:0;"><img src="{{user.coverimg}}" style="width: 40px; height:40px;"></a></li> -->
         <!-- <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li> -->
