--- a/client/components/navbar/navbar.scss
+++ b/client/components/navbar/navbar.scss
@@ -14,6 +14,7 @@
 }
 .navbar-default .navbar-nav > li > span > a {
 	color:#777777;
+	font-size:18px;
 }
 
 .navbar-default .navbar-nav > li > span > a:hover, .navbar-default .navbar-nav > li > span > a:focus {
