fixed nav and fixed delete question which effects users answer_counts

--- a/client/app/account/profile/profile.scss
+++ b/client/app/account/profile/profile.scss
@@ -76,3 +76,7 @@ a.list-group-item:hover, a.list-group-item:focus {
    width: 80%; margin-top:10px; margin-bottom:10px;
 }
 
+.emptyResults {
+    border-bottom:1px solid #dddddd; padding:15px;
+}
+
