--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -106,6 +106,10 @@ a:hover {
   border-color: #e5e6e9 #dfe0e4 #d0d1d5;
 }
 
+.borderTop {
+  border-top: 1px solid #dddddd;
+}
+
 .background-blue {
   background-color: aliceblue;
 }
@@ -386,10 +390,6 @@ a:hover {
   margin: 10px auto;
   font-size: 1.5em;
   color: #428bca;
-  font-weight: bold;
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
-  box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
   background: -webkit-linear-gradient(white, #FFF9AA); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(white, #FFF9AA); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(white, #FFF9AA); /* For Firefox 3.6 to 15 */
