--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -27,7 +27,7 @@ textarea {
 iframe{
   width:85%;
   height:280px;
-  box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
+  /*box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);*/
 }
 
 .textAngular img {
@@ -386,7 +386,7 @@ a:hover {
 
 .questionHelpBtn {
   display: block;
-  width:200px;
+  width:250px;
   margin: 10px auto;
   font-size: 1.5em;
   color: #428bca;
