--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -7,7 +7,7 @@
     	<ul class="list-unstyled">
     	<li><a ng-href="/about">เกี่ยวกับเพื่อนใจ</a></li>
     	<li><a ng-href="/aboutcreator">รู้จักกับผู้สร้าง</a></li>
-    	<li><a ng-href="/join">มาเป็นส่วนร่วมกับเรา</a></li>
+    	<li><a ng-href="/contact">มาเป็นส่วนร่วมกับเรา</a></li>
     	<li><a ng-href="/suggestion">เสนอแนะ</a></li>
     	<li><a ng-href="/report">รายงานปัญหาของเว็บ</a></li>
     	<li><a ng-href="/contact">ติตต่อ</a></li>
