--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -128,6 +128,13 @@ a:hover {
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#d9fcff',GradientType=0 );
 }
 
+.background-yellow-gradient {
+  background: -webkit-linear-gradient(white, #FFF9AA); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #FFF9AA); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #FFF9AA); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #FFF9AA); /* Standard syntax */
+}
+
 .background-white {
   background: white;
 }
@@ -381,7 +388,7 @@ a:hover {
 }
 
 .questionContent p {
-  padding:20px;
+  padding:15px;
 }
 
 .questionHelpBtn {
@@ -390,10 +397,6 @@ a:hover {
   margin: 10px auto;
   font-size: 1.5em;
   color: #428bca;
-  background: -webkit-linear-gradient(white, #FFF9AA); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, #FFF9AA); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, #FFF9AA); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, #FFF9AA); /* Standard syntax */
 }
 
 #findAnswer {
