--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -65,3 +65,11 @@
 #answerInput input{
     background: linear-gradient(white, #fff9aa); font-size: 1.5em; width:100%; border-radius: 0; margin-top:15px; border-radius: 4px;
 }
+
+.questionSidePanel hr {
+    width:80%; margin:0 auto;
+}
+
+.questionSidePanel h3 {
+    text-align: center;
+}
