--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -370,7 +370,7 @@ a:hover {
 
 .userIcon {
   display: block;
-  margin: 0 auto;
+  margin: 10px auto;
   border-radius: 4px;
    height: 45px; 
    width:45px;     
