--- a/server/templates/newAnswerEmail/html.ejs
+++ b/server/templates/newAnswerEmail/html.ejs
@@ -49,7 +49,7 @@
       <tr>
         <td style="padding:0 30px 30px;font-family:helvetica neue,helvetica,arial,sans-serif;font-weight:normal"> 
           <div style="padding:0 15px;color:#666666;line-height:25px;text-align:left">
-            <%- question.body %>  
+            <%- answer.content %>  
           </div>
           <div style="font-size:12px;text-align:left;padding:10px 15px 25px 15px;border-bottom:1px solid #ddd">
             <a href='http://www.puanjai.com/questions/<%= question._id %>' style="color:#0e98d7;text-decoration:none" target="_blank">คําตอบนี้มาจากคําถาม <strong>“<%= question.name %>”</strong></a>
