--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -9,7 +9,7 @@
     	<li><a ng-href="/aboutcreator">รู้จักกับผู้สร้าง</a></li>
     	<li><a ng-href="/contact">มาเป็นส่วนร่วมกับเรา</a></li>
     	<li><a ng-href="/suggestion">เสนอแนะ</a></li>
-    	<li><a ng-href="/report">รายงานปัญหาของเว็บ</a></li>
+    	<li><a ng-href="/report">แจ่งปัญหาเว็บ</a></li>
     	<li><a ng-href="/contact">ติตต่อ</a></li>
     	<!-- <li><a ng-href="/help">ช่วยเหลือเรา</a></li> -->
     	<!-- <li><a ng-href="/about">กิจกรรมเพื่อนใจ</a></li> -->
@@ -20,8 +20,8 @@
     	<hr>
     	<a ng-href="/aboutcreator"><h3>1. เข้าใจสถานการณ์ของผู้สร้าง</h3></a>
     	<a ng-href="/contact"><h3>2. รับบริจาคอาหารและปัจจัย</h3></a>
-    	<a ng-href="/contact"><h3>3. รับสมัครผู้ร่วมงาน</h3></a>
-    	<a ng-href="https://www.facebook.com/supakorn.laohasongkram"><h3>4. ให้กําลังใจผู้คนทํา</h3></a>
+    	<a ng-href="/supportus"><h3>3. รับสมัครผู้ร่วมงาน</h3></a>
+    	<a ng-href="https://www.facebook.com/supakorn.laohasongkram"><h3>4. ให้กําลังใจผู้สร้าง</h3></a>
     </div>
     <div id="footerContact" class="col-md-4">
     	<h2>ติดตามข่าวสาร</h2>
@@ -29,7 +29,7 @@
     	<a ng-href="https://www.facebook.com/pages/%E0%B9%80%E0%B8%9E%E0%B8%B7%E0%B9%88%E0%B8%AD%E0%B8%99%E0%B9%83%E0%B8%88-SoulFriend/1592541667644089?ref=hl"><i class="fa fa-facebook-square fa-2x" style="color:#133783;"></i></a>
     	<a ng-href="/contact"><img ng-src="/assets/images/line-icon.png" style="  width:40px;margin-top: -15px;"/></a>
     	<hr style="width:70%;">
-    	ติดตามข่าวสารของ<h3>หนังสือ "ชีวิตนี้ขอทําดีแลกข้าว"</h3>ของผู้ทําเว็บนี้<a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?ref=hl">ได้ที่นี้</a>
+    	ติดตามชีวิตแปลกๆของผู้สร้างเพื่อนใจใน <h3>หนังสือ "ชีวิตนี้ขอทําดีแลกข้าว"</h3><a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?ref=hl"> ได้ที่นี้จ้า</a>
   <!--   	<a ng-href=""><i class="fa fa-twitter-square fa-2x" style="color:#55acee;"></i></a> -->
     </div>
     </div>
