--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -16,12 +16,30 @@
     	</ul>
     </div>
     <div class="col-md-4">
-    	<h2>ช่วยเพื่อนใจให้อยู่ได้</h2>
-    	<hr>
-    	<a ng-href="/aboutcreator"><h3>1. เข้าใจสถานการณ์ของผู้สร้าง</h3></a>
+    <a href="/support">
+    	<h1 ng-mouseover="pulse='animated pulse'" ng-mouseleave="pulse=''">ช่วยเพื่อนใจให้อยู่ได้</h1>
+    <img ng-class="pulse" ng-mouseover="pulse='animated pulse'" ng-mouseleave="pulse=''"ng-src="/assets/images/biglogo.png" style="width:150px; margin-top: 40px;">
+    </a>
+
+<!--     <a ng-href="">
+        <div id="aboutUs" class="haveBorder text-center pinkGradient">
+            <div class="smallPadding sidebarInnerBox blueBorder">
+            <h2>รู้จักกับเรา</h2>
+            <small>- ทําด้วยใจ -</small>
+            </div>
+            <div style="position: absolute; left: 50%; bottom:0;">
+                <div id="mainTitle" style="position: relative; left: -50%;">
+                  <i class="fa fa-heart fa-2x red"></i>
+                </div>
+            </div>
+            <img ng-src="/assets/images/cutecat.png" style="width:100%;"/>
+        </div>
+    </a> -->
+    	<!-- <hr> -->
+    <!-- 	<a ng-href="/aboutcreator"><h3>1. เข้าใจสถานการณ์ของผู้สร้าง</h3></a>
     	<a ng-href="/contact"><h3>2. รับบริจาคอาหารและปัจจัย</h3></a>
-    	<a ng-href="/supportus"><h3>3. รับสมัครผู้ร่วมงาน</h3></a>
-    	<a ng-href="https://www.facebook.com/supakorn.laohasongkram"><h3>4. ให้กําลังใจผู้สร้าง</h3></a>
+    	<a ng-href="/support"><h3>3. รับสมัครผู้ร่วมงาน</h3></a>
+    	<a ng-href="https://www.facebook.com/supakorn.laohasongkram"><h3>4. ให้กําลังใจผู้สร้าง</h3></a> -->
     </div>
     <div id="footerContact" class="col-md-4">
     	<h2>ติดตามข่าวสาร</h2>
