--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,6 +21,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'about/about.scss';
 @import 'account/login/login.scss';
 @import 'account/profile/profile.scss';
+@import 'account/settings/settings.scss';
 @import 'admin/admin.scss';
 @import 'ask/ask.scss';
 @import 'contact/contact.scss';
