--- a/server/templates/welcomeEmail/html.ejs
+++ b/server/templates/welcomeEmail/html.ejs
@@ -37,12 +37,12 @@
         <td style="padding:30px 30px 20px;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;font-size:16px;line-height:22px;color:#666666;text-align:center;">
           <h1>ยินดีตอนรับสู่เพื่อนใจ</h1>
           <hr>
-          <p>ขอให้ใช้เว็บนีให้มีประโยชน์สูงสุด ฝึกที่จะแบ่งบันปัญหาทางใจของเราเอง ฝึกที่จะเป็นคนเปิดเผยต่อความจริง เผื่อคําถามที่เราได้ถามอาจจะได้เป็นแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาเหมือนๆกันได้เจอคําตอบโดยเร็ว</p>
+          <p>ขอให้ใช้เว็บนี้ด้วยความรัก ฝึกที่จะแบ่งบันปัญหาทางใจของเราเอง ฝึกที่จะเป็นคนเปิดเผยต่อความจริง เผื่อคําถามที่เราได้ถามอาจจะได้เป็นแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาเหมือนๆกันได้เจอคําตอบโดยเร็ว</p>
         </td>
       </tr>
       <tr>
         <td style="padding:0 30px 30px;font-family:helvetica neue,helvetica,arial,sans-serif;font-weight:normal"> 
-        <div><div style="padding:30px"><a title="Confirm Email Address" style="font-size:13px;font-weight:100;font-family:Helvetica,Arial,sans-serif;text-transform:uppercase;text-align:center;letter-spacing:1px;text-decoration:none;line-height:62px;display:block;width:300px;min-height:60px;border-top-left-radius:3px;border-top-right-radius:3px;border-bottom-right-radius:3px;border-bottom-left-radius:3px;color:rgb(255,255,255);background:rgb(57,139,206);margin:0px auto" href='http://www.puanjai.com/users/verify/<%= verificationCode %>' target="_blank">ยืนยันอีเมล</a></div></div>
+        <div><div style="padding:30px"><a title="Confirm Email Address" style="font-size:13px;font-weight:100;font-family:Helvetica,Arial,sans-serif;text-transform:uppercase;text-align:center;letter-spacing:1px;text-decoration:none;line-height:62px;display:block;width:300px;min-height:60px;border-top-left-radius:3px;border-top-right-radius:3px;border-bottom-right-radius:3px;border-bottom-left-radius:3px;color:rgb(255,255,255);background:rgb(57,139,206);margin:0px auto" href='http://www.puanjai.com/api/users/verify/<%= verificationCode %>' target="_blank">ยืนยันอีเมลของคุณ</a></div></div>
         </td>
       </tr>
 
@@ -57,7 +57,6 @@
       <td style="text-align:center;padding:20px 0px 5px 0px;font-family:Helvetica,Arial,sans-serif;font-size:12px;line-height:18px;color:#888888">
         © เพื่อนใจ | 
         <a style="color:#888888" href="mailto:puanjaicom@gmail.com" target="_blank">puanjai.com@gmail.com</a>
-        
       </td>
     </tr>
     <tr>
