--- a/client/components/etc/verified.html
+++ b/client/components/etc/verified.html
@@ -2,7 +2,7 @@
 <h1 style="font-size: 3em;"><i class="fa fa-check"></i> อีเมลของคุณได้รับการยืนยันแล้ว</h1>
 <h1>ขอบคุณมากครับ</h1>
 <br>
-<a class="puanjaiBorder black" href="/" style="padding:15px; border-radius: 4px;">
-	กลับสู่หน้าหลัก
+<a class="puanjaiBorder black" href="/login" style="padding:15px; border-radius: 4px;">
+	เข้าสู่ระบบ
 </a>
 </div>
