--- a/server/templates/welcomeEmail/html.ejs
+++ b/server/templates/welcomeEmail/html.ejs
@@ -35,9 +35,9 @@
       <tbody>
       <tr>
         <td style="padding:30px 30px 20px;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;font-size:16px;line-height:22px;color:#666666;text-align:center;">
-          <h1>ยินดีตอนรับสู่เพื่อนใจ</h1>
+          <h1>ยินดีต้อนรับสู่เพื่อนใจ</h1>
           <hr>
-          <p>ขอให้ใช้เว็บนี้ด้วยความรัก ฝึกที่จะแบ่งบันปัญหาทางใจของเราเอง ฝึกที่จะเป็นคนเปิดเผยต่อความจริง เผื่อคําถามที่เราได้ถามอาจจะได้เป็นแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาเหมือนๆกันได้เจอคําตอบโดยเร็ว</p>
+          <p>ขอให้ใช้เว็บนี้ด้วยความรัก ฝึกที่จะแบ่งบันปัญหาใจของเราเอง ฝึกที่จะเป็นคนเปิดเผยต่อความจริง เผื่อคําถามที่เราได้ถามอาจจะได้เป็นแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาเหมือนๆกันให้ได้เจอคําตอบนั้นโดยเร็ว</p>
         </td>
       </tr>
       <tr>
