--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -432,3 +432,5 @@ a:hover {
   border-style: solid solid outset;
   pointer-events: none;
 }
+
+body:not(:-moz-handler-blocked) #aboutcreator { text-shadow: 1px 1px 2px black; }
