--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -2,9 +2,61 @@
   display: none !important;
 }
 
+/*@font-face {
+    font-family: font6;
+    src:url(/assets/fonts/EDPenSook.ttf);
+}*/
+@font-face {
+    font-family: font1;
+    src:url(/assets/fonts/1.ttf);
+}
+
+@font-face {
+    font-family: font2;
+    src:url(/assets/fonts/Nithan.ttf);
+}
+
+@font-face {
+    font-family: font3;
+    src:url(/assets/fonts/ASGMatrathanLight.ttf);
+}
+
+@font-face {
+    font-family: font4;
+    src:url(/assets/fonts/CSPraJad.otf);
+}
+
+@font-face {
+    font-family: font5;
+    src:url(/assets/fonts/DRdeco.ttf);
+}
 @font-face {
     font-family: font6;
     src:url(/assets/fonts/EDPenSook.ttf);
+}
+@font-face {
+    font-family: font7;
+    src:url(/assets/fonts/kruengprung.ttf);
+}
+@font-face {
+    font-family: font8;
+    src:url(/assets/fonts/PGVIM.ttf);
+}
+@font-face {
+    font-family: font9;
+    src:url(/assets/fonts/Quark-light.otf);
+}
+@font-face {
+    font-family: font10;
+    src:url(/assets/fonts/torsilp-wadkhen.ttf);
+}
+@font-face {
+    font-family: font11;
+    src:url(/assets/fonts/WDB_Bangna.ttf);
+}
+@font-face {
+    font-family: font12;
+    src:url(/assets/fonts/LayijiRuDuuRon.ttf);
 }
 
 * {
@@ -36,6 +88,11 @@ iframe{
 
 .page-header > h1 {
   font-size: 5em;
+}
+
+.floatCenter {
+  margin: 0 auto;
+  display: block;
 }
 
 /*img {
