--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -85,6 +85,10 @@
     background-color: aliceblue;
 }
 
+.textOutput > * {
+    font-size: 24px;
+}
+
 /********************************/
 /*          Panel cards         */
 /********************************/
