--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -87,6 +87,8 @@
 
 .textOutput > * {
     font-size: 24px;
+    font-family: font4;
+    line-height: 1.9;
 }
 
 /********************************/
