--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -180,6 +180,14 @@ a:hover {
   padding: 7px;
 }
 
+.havePadding {
+  padding:15px;
+}
+
+.haveMargin {
+  margin:15px;
+}
+
 .logo {
   width: 30px;
 }
@@ -310,7 +318,7 @@ a:hover {
 }
 
 .questionTitle {
-  font-size: 2em; margin-top: 25px; margin-bottom: 0; font-family: font4;
+  font-size: 2em; margin-top: 30px; margin-bottom: 0; font-family: font4;
 }
 
 .nav-pills {
